Fixes overflows on mobile

--- a/styles/columns.less
+++ b/styles/columns.less
@@ -8,6 +8,7 @@
     position: absolute;
     white-space: nowrap;
     width: ~"calc(100% - 50px)";
+    -webkit-overflow-scrolling: touch;
 }
 
 .columns-blank {
